# MedDiagnose_AI

./: .env.example  .gitignore  Dockerfile  Linkedin Reactions.lottie  README.md  ai_moel_identifier.txt  app.py  app_fastapi.py  chatbot_agent.py  email_tool.py  gmail_setup.py  main.py  ml_pipeline.py  patch.py  pyproject.toml  python.lottie  report_README.md  report_export.py  requirements-prod.txt  requirements.txt  test.ipynb  test_datasets.py  xai_explainer.py
.streamlit/: config.toml
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/components/: Background.jsx  BatchPanel.jsx  ChatDrawer.jsx  ColumnPicker.jsx  EDADashboard.jsx  Navbar.jsx  PatientForm.jsx  ReportPanel.jsx  ResultPanel.jsx  Sidebar.jsx  SkeletonLoader.jsx  StatsRow.jsx  TabNav.jsx  Typewriter.jsx  UploadScreen.jsx  WelcomePortal.jsx  XAIExplorer.jsx
